# python-library-course-builder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
plugins/python-library-course-builder/skills/building-python-library-courses/assets/course-template/platform/: package-lock.json  package.json  pyproject.toml  vite.config.ts
plugins/python-library-course-builder/skills/building-python-library-courses/assets/course-template/platform/app/: CourseKitApp.tsx  CourseLesson.tsx  KnowledgeCheck.tsx  PythonCode.tsx  ResizeSeparator.tsx  courseLayout.d.mts  courseLayout.mjs  courseLocale.d.mts  courseLocale.mjs  globals.css  layout.tsx  lessonGuide.d.mts  lessonGuide.mjs  page.tsx  progressionLifecycle.d.mts  progressionLifecycle.mjs
plugins/python-library-course-builder/skills/building-python-library-courses/assets/course-template/platform/coursekit/: __init__.py  cli.py  compiler.py  io.py  models.py
plugins/python-library-course-builder/skills/building-python-library-courses/assets/course-template/platform/runner/: __init__.py  __main__.py  app.py  execution.py  pytest_bootstrap.py
plugins/python-library-course-builder/skills/building-python-library-courses/assets/course-template/platform/runner/tests/: __init__.py  test_api.py  test_execution.py  test_locale.py
plugins/python-library-course-builder/skills/building-python-library-courses/assets/course-template/platform/scripts/: learn.mjs
plugins/python-library-course-builder/skills/building-python-library-courses/assets/course-template/platform/tests/: course-layout-behavior.test.mjs  course-layout-contract.test.mjs  course-lesson-outline-contract.test.mjs  course-locale-behavior.test.mjs  course-tutorial-guide-behavior.test.mjs  template-contract.test.mjs  web-progression-behavior.test.mjs  web-progression-contract.test.mjs
(+78 files in other folders)
