[project]
name = "python-library-course-builder"
version = "0.1.0"
description = "Release tooling for the Python Library Course Builder Codex plugin"
requires-python = ">=3.13,<3.14"
dependencies = []

[dependency-groups]
dev = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pyyaml>=6,<7",
  "skills-ref==0.1.1",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.uv]
package = false
required-version = "==0.11.7"
