[project]
name = "coursekit-learning-platform"
version = "0.1.0"
description = "Local Web, CLI, pytest, and Runner shell for a generated Python course"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "pytest>=8.3,<9",
  "pytest-timeout>=2.3,<3",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = ["httpx>=0.28,<1"]

[tool.pytest.ini_options]
testpaths = ["runner/tests"]
addopts = "-ra"
pythonpath = ["."]

[tool.uv]
package = false

[tool.coursekit]
source = "course/source"
output = "course"
