[project]
name = "coursekit-learning-platform"
version = "0.1.0"
description = "Local Web, CLI, pytest, and Runner shell for a generated Python course"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.139.2,<1",
  "pydantic>=2.10,<3",
  "pytest>=9.1.1,<10",
  "pytest-timeout>=2.3,<3",
  "uvicorn[standard]>=0.51.0,<1",
]

[dependency-groups]
dev = ["httpx>=0.28,<1"]

[tool.pytest.ini_options]
testpaths = ["runner/tests"]
addopts = "-ra"
pythonpath = ["."]

[tool.uv]
package = false

[tool.coursekit]
source = "course/source"
output = "course"
